@@ -11,6 +11,7 @@ Display status bar messages instead of notifications (in a few cases).
 
 Bug Fixes
 ---------
+Fix the context menu choice of selected text values. Do not crash/freeze on selection changes.
 Fix the dependency calculation after region changes and after sheet additions/removals.
 Fix text/background/border color actions by using KoColorPopupAction (if pigment is built).
 Fix map/sheet protection action.
